package Targil3;

public enum GameModes {
    EASY, MEDIUM, STRONG
}
