package Targil3;

public enum MenuOptions {
    Exit,
    SinglePlayer,
    MultiPlayer,
}
